<?xml version="1.0"?>
<package format="3">
  <name>knowrob_ros</name>
  <version>1.0.0</version>
  <description>KnowRob ROS is a ROS wrapper for KnowRob 2.0.0</description>
  
  <author>Sascha jongebloed</author>
  <maintainer email="sasjonge@uni-bremen.de">Sascha jongebloed</maintainer>

  <license>BSD</license>

  <url type="website">http://www.knowrob.org</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <!-- ROS2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>spdlog</depend>
  <depend>libmongoc-dev</depend>
  <depend>fmt</depend>

  <!-- Export dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
</package>
